# Multidown

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  index.m3u8  multidown.conf
src/: DownloadManager.rs  cli.rs  downloader.rs  lib.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs
src/core/: actor_manager.rs  actor_task.rs  downloader.rs  error.rs  mod.rs  task.rs
src/core/task/: actor.rs  chunk_manager.rs  download.rs  handlers.rs  messages.rs  mod.rs  retry.rs  state.rs  util.rs
src/ui/: mod.rs  progress.rs
src/utils/: logger.rs  mod.rs  validator.rs
tests/: integration.rs
