[package]
name = "multidown"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
url = "2.5"
crossterm = "0.27"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
toml = "0.7"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"