[package]
name = "multidown"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["stream"] }
futures = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
indicatif = "0.17"
crossterm = "0.27"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "1.0"
bytes = "1.0"
url = "2.5"
clap = { version = "4.0", features = ["derive"] }
toml = "0.7"

[dev-dependencies]
tokio-test = "0.4"