[package]
name = "multidown"
version = "0.1.0"
edition = "2021"
authors = ["panzhifu"]
description = "一个用 Rust 编写的多线程下载管理器"
license = "MIT"
repository = "https://github.com/panzhifu/Multidown"
keywords = ["download", "multithread", "resume", "progress"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
anyhow = "1.0.86"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
indicatif = "0.17"
crossterm = "0.27"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "1.0"
bytes = "1.0"
url = "2.5"
clap = { version = "4.0", features = ["derive"] }
toml = "0.7"
actix = "0.13.5"
actix-rt = "2"
uuid = { version = "1.6", features = ["v4", "serde"] }
regex = "1.11.1"
awc = { version = "3.4.1", features = ["rustls"] }
rand = "0.8"

[build-dependencies]
vergen = { version = "8", features = ["build", "git", "gitcl"] }

[dev-dependencies]
tokio-test = "0.4"
